--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <main>
       <section class="section-about">
-        <div class="u-center-text u-mb-lg">
+        <div class="u-center-text u-mb-lg u-mt-lg">
           <h2 class="heading-secondary">Exciting tours for adventurous people</h2>
         </div>
         <div class="row u-center-text">
@@ -86,17 +86,17 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
-                src="./img/nat-1-large.jpg"
+                srcset="./img/nat-1.jpg 1x, ./img/nat-1-large.jpg 2x"
                 alt="nat-1"
                 class="composition__photo composition__photo--p1"
               />
               <img
-                src="./img/nat-2-large.jpg"
+                srcset="./img/nat-2.jpg 1x, ./img/nat-2-large.jpg 2x"
                 alt="nat-2"
                 class="composition__photo composition__photo--p2"
               />
               <img
-                src="./img/nat-3-large.jpg"
+                srcset="./img/nat-3.jpg 1x, ./img/nat-3-large.jpg 2x"
                 alt="nat-3"
                 class="composition__photo composition__photo--p3"
               />
@@ -317,7 +317,7 @@
             <div class="u-mb-md">
               <h2 class="heading-secondary">start booking now!!</h2>
             </div>
-            <div class="conatct__form-group u-mb-sm">
+            <div class="contact__form-group u-mb-sm">
               <input
                 id="form-name"
                 class="contact__form-input"
@@ -372,7 +372,11 @@
 
     <footer class="footer">
       <div class="footer__logo-box">
-        <img src="./img/logo-green-2x.png" alt="logo" class="footer__logo" />
+        <img
+          srcset="./img/logo-green-1x.png 1x, ./img/logo-green-2x.png 2x"
+          alt="logo"
+          class="footer__logo"
+        />
       </div>
       <div class="footer__container">
         <div class="row">
